# study

./: .gitignore  main.py
rust/: .gitignore  Cargo.toml  README.md  _llm_export.md
rust/01_basics/: .nvimlog
rust/01_basics/01_variables/: Cargo.toml
rust/01_basics/01_variables/src/: main.rs
rust/01_basics/02_data_types/: Cargo.toml
rust/01_basics/02_data_types/src/: main.rs
rust/01_basics/03_functions/: Cargo.toml
rust/01_basics/03_functions/src/: main.rs
rust/01_basics/04_control_flow/: Cargo.toml
rust/01_basics/04_control_flow/src/: main.rs
rust/01_basics/05_ownership/: Cargo.toml
rust/01_basics/05_ownership/src/: 02_references.rs  main.rs
rust/01_basics/06_slices/: Cargo.toml
rust/01_basics/06_slices/src/: main.rs
rust/01_basics/07_structs/: Cargo.toml
rust/01_basics/07_structs/src/: main.rs
rust/01_basics/08_enums/: Cargo.toml
rust/01_basics/08_enums/src/: main.rs
rust/01_basics/09_collections/: .nvimlog  Cargo.toml
rust/01_basics/09_collections/src/: main.rs
rust/01_basics/10_modules/restautant/: Cargo.toml
rust/01_basics/11_handing_errors/: Cargo.toml
rust/01_basics/11_handing_errors/src/: main.rs
rust/02_exercises/: README_collections.md
rust/02_exercises/01_vectors/01_vec_stack/: .nvimlog  Cargo.toml
rust/02_exercises/01_vectors/02_safe_get/: Cargo.toml
rust/02_exercises/01_vectors/03_borrow_shift/: Cargo.toml
rust/02_exercises/01_vectors/04_table_row/: Cargo.toml
rust/02_exercises/02_strings/01_join_with_comma/: Cargo.toml
rust/02_exercises/02_strings/02_utf8_trap/: Cargo.toml
rust/02_exercises/03_hashmaps/01_word_frequencies/: Cargo.toml
rust/02_exercises/03_hashmaps/02_stats_mean_median_mode/: Cargo.toml
rust/02_exercises/fibonacci/src/: main.rs
rust/02_exercises/guessing_game/src/: main.rs
rust/02_exercises/temperature_converter/src/: main.rs
rust/03_projects/company_directory_cli/: Cargo.toml
rust/03_projects/company_directory_cli/src/: main.rs
rust/03_projects/temperature_converter_web/: Cargo.toml
rust/03_projects/temperature_converter_web/src/: main.rs  templates.rs
rust/04_experiments/mathmagic/: Cargo.toml
rust/04_experiments/mathmagic/src/: main.rs
rust/basex/src/: main.rs
rust/codex-rust-study-materials/: .nvimlog  README.md  Rust Code Style Guide.md  Working in the Terminal and Cargo.md  Правила оформления Rust кода.md  Работа в терминале и cargo.md
rust/codex-rust-study-materials/Homework/: README.md
rust/codex-rust-study-materials/Practice/: README.md
rust/codex-rust-study-materials/Rust-Koans/: Cargo.toml  README.md
rust/codex-rust-study-materials/Source Code/: README.md
rust/codex-rust-study-materials/Theory/: 01 Tools, rustup, and Cargo.md  02 Basic Syntax, Types, and Control Flow.md  03 Ownership, Borrowing, and Slices.md  04 Structs, Enums, and Pattern Matching.md  05 Strings, Collections, and Iterators.md  06 Functions, Closures, Traits, Generics, and Lifetimes.md  07 Option, Result, and Error Handling.md  08 CLI, Files, and Data Parsing.md  09 Modules, Crates, and Workspace.md  10 Testing, Documentation, and Code Quality.md  11 Concurrency: Threads, Channels, and Shared State.md  README.md
rust/codex-rust-study-materials/Домашние задания/: README.md
rust/codex-rust-study-materials/Исходники/: README.md
rust/codex-rust-study-materials/Практика/: README.md
rust/codex-rust-study-materials/Теория/: 01 Инструменты, rustup и cargo.md  02 Базовый синтаксис, типы и управление потоком.md  03 Ownership, borrowing и slices.md  04 Struct, enum и pattern matching.md  05 Строки, коллекции и итераторы.md  06 Functions, closures, traits, generics и lifetimes.md  07 Option, Result и обработка ошибок.md  08 CLI, файлы и разбор данных.md  09 Модули, crates и workspace.md  10 Тестирование, документация и качество кода.md  11 Параллелизм: threads, channels и shared state.md  README.md
rust/crates/struct_lab/: Cargo.toml
rust/crates/temperature-converter/: Cargo.toml
rust/data_types/src/: main.rs
rust/guessing_game/src/: main.rs
rust/mathmagic-in-rust/: Cargo.toml
rust/mathmagic-in-rust/src/: main.rs
rust/modules/cmp/: Cargo.toml
rust/ownership/src/: dangling_referece.rs  hello.rs  hello_world.rs  main.rs  ownnership_and_func.rs  references_and_borrowing.rs  return_value_and_scope.rs
rust/slices/src/: main.rs  no_use_slice.rs  test.rs  use_slice.rs
rust/variables/src/: main.rs
(+511 files in other folders)
