[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hw-3-db-model"
version = "0.1.0"
description = "Homework 3 for SQLAlchemy and Alembic"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2.0",
    "fastapi>=0.115,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
